@@ -100,12 +100,9 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource(){
         CorsConfiguration configuration = new CorsConfiguration();
         //configuration.setAllowedOrigins(List.of(frontendUrl));
-        configuration.setAllowedOrigins(List.of("null","gc.guest-ltdc.fr", "guest-ltdc.fr", "46.202.130.99"));
+        configuration.setAllowedOrigins(List.of("http://guest-ltdc.fr","gc.guest-ltdc.fr", "guest-ltdc.fr", "46.202.130.99"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        //configuration.setAllowedHeaders(List.of("Authorization","Content-Type","X-XSRF-TOKEN", "X-Requested-With", "Accept"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type", "Set-Cookie"));
-
+        configuration.setAllowedHeaders(List.of("Authorization","Content-Type","X-XSRF-TOKEN", "X-Requested-With", "Accept","*"));
         configuration.setAllowCredentials(true);
         configuration.setExposedHeaders(List.of("Authorization", "Content-Type", "X-Requested-With", "Accept", "Set-Cookie"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
